<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#D8000000"
    app:cardCornerRadius="5dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/iv_thumb"
            android:layout_width="77dp"
            android:layout_height="73dp"
            android:background="@drawable/img"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/margarita_glass"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_thumb"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/place_all_ingredients_in_an_blender"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/iv_thumb"
            app:layout_constraintTop_toBottomOf="@id/tv_drink"
            app:layout_constraintWidth_percent="0.4" />

        <ImageView
            android:id="@+id/iv_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="272dp"
            android:layout_marginLeft="272dp"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />

        <TextView
            android:id="@+id/tv_alcohol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/alcohol"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/iv_fav"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/ck_alcohol"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:checked="true"
            app:layout_constraintStart_toStartOf="@id/iv_fav"
            app:layout_constraintTop_toBottomOf="@id/tv_alcohol" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>